
More information on each of the fixes can be found in the project
development home at https://github.com/projectestac/agora_nodes

Changes in progress
---------------------------------------------------------------------------------------
- GCE: Updated from 2.2.5 (Legacy Google Calendar Events 2.4) to 3.1.2 (Simple Calendar - Google Calendar Plugin) (Trello #1034)
- New users: Fixed URL to change password not showing in email sent to new users


Changes 16.09.07
---------------------------------------------------------------------------------------
- buddypress-docs: Fixed bug when uploading files when editing them if protocol it is not HTTPS (Trello #1205)


Changes 16.08.22
---------------------------------------------------------------------------------------
- intranet-importer: Fixed import of images with capital letters in extensions
- intranet-importer: Added import of images uploaded using IWforms
- add-to-any: Show the same options to admins in Nodes and in XTECBlocs (Trello #1031)
- xtec: Added es_c_unsubtext field to fix site name in Email subscribers (Trello #1315)


Changes 16.07.20
---------------------------------------------------------------------------------------
- Fixed removal of users by admins (Trello #1298)


Changes 16.07.04
---------------------------------------------------------------------------------------
- Upgraded WordPress to version 4.5.3 (Trello #1272)
- Reviewed embed support in kses to let contributors add Picasa web albums (Trello #1182)
- BuddyPress Group Email Subscription: Converted to submodule and updated to 3.6.1 (Trello #1042)
- buddypress-docs: Suggest labels when adding new documents (Trello #1228)
- BuddyPress: Converted to submodule and upgraded to version 2.5.3 (Trello #1057)
- BuddyPress: Added option to disable direct post into general wall (Trello #1264)
- enllacos-educatius: Replaced Ministry of Education link
- add-to-any: Upgraded module to version 1.6.17. Added more options for xtecadmin (Trello #1031)